--- a/mushroomculti.css
+++ b/mushroomculti.css
@@ -7,6 +7,9 @@ div.col-lg-6:nth-of-type(1) {
 	-ms-flex-order: 1;
 	order: 1;
 }
+.col-lg-6 p {
+	margin-bottom: 0.1rem;
+}
 .container-fluid img {
 	max-width: 500px;
 	max-height: 500px;
