--- a/faq.css
+++ b/faq.css
@@ -28,10 +28,10 @@ body {
 .card:hover {
 	box-shadow: 0px 3px 8px rgb(0 0 0 / 13%);
 }
-a {
+.card-header a {
 	color: #aac157;
 }
-a:hover {
+.card-header a:hover {
 	color: #aac157;
 	text-decoration: none;
 }
@@ -42,10 +42,10 @@ a:hover {
 .card-block {
 	color: #6b7d8e;
 }
-ul {
+/* .row ul {
 	padding-left: 0;
-}
-img {
+} */
+.card-block img {
 	width: 100%;
 	display: block;
 	margin-bottom: 0.5rem;
