--- a/aboutus.css
+++ b/aboutus.css
@@ -1,10 +1,10 @@
 /** @format */
 .profile {
-	width: 18rem;
+	width: 14.5rem;
 	height: 20rem;
 	margin-top: 3rem;
 	margin-left: 5rem;
-	border-radius: 15%;
+	/* border-radius: 15%; */
 	box-shadow: 2px 3px 5px 0px rgb(58 55 55);
 }
 
